--- a/notebook/problems.es.ipynb
+++ b/notebook/problems.es.ipynb
@@ -180,18 +180,18 @@
     "\n",
     "    return result\n",
     "\n",
-    "def rnorm(mu = 0, s = 1, n = 1):\n",
+    "def rnorm(n = 1, mu = 0, s = 1):\n",
     "    \"\"\"\n",
     "    Calcula el acumulado de la distribución normal.\n",
     "    \"\"\"\n",
-    "    result = norm.rvs(loc = mu, scale = s, size = n)\n",
+    "    result = norm.rvs(size = n, loc = mu, scale = s)\n",
     "\n",
     "    return result"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "49698435",
    "metadata": {},
    "outputs": [
@@ -201,18 +201,9 @@
      "text": [
       "Probability that a normal(10, 0.2) takes the value 2: 0.0\n",
       "Probability that a normal(10, 0.2) will take a value less than 2: 0.0\n",
-      "Which value of a normal(10, 0.2) has a cumulative probability of 0.9? 10.25631031310892\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "rnorm() got an unexpected keyword argument 'loc'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[17]\u001b[39m\u001b[32m, line 9\u001b[39m\n\u001b[32m      7\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mProbability that a normal(10, 0.2) will take a value less than 2: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mpnorm(\u001b[32m2\u001b[39m,\u001b[38;5;250m \u001b[39mmu=\u001b[32m10\u001b[39m,\u001b[38;5;250m \u001b[39ms=\u001b[38;5;250m \u001b[39m\u001b[32m0.2\u001b[39m)\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m)\n\u001b[32m      8\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mWhich value of a normal(10, 0.2) has a cumulative probability of 0.9? \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mqnorm(\u001b[32m0.9\u001b[39m,\u001b[38;5;250m \u001b[39mmu=\u001b[32m10\u001b[39m,\u001b[38;5;250m \u001b[39ms=\u001b[38;5;250m \u001b[39m\u001b[32m0.2\u001b[39m)\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m)\n\u001b[32m----> \u001b[39m\u001b[32m9\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mGenerate 2000 random values from a normal(10, 0.2) distribution: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[43mrnorm\u001b[49m\u001b[43m(\u001b[49m\u001b[32;43m2000\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;250;43m \u001b[39;49m\u001b[43mloc\u001b[49m\u001b[38;5;250;43m \u001b[39;49m\u001b[43m=\u001b[49m\u001b[38;5;250;43m \u001b[39;49m\u001b[32;43m10\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;250;43m \u001b[39;49m\u001b[43mprob\u001b[49m\u001b[38;5;250;43m \u001b[39;49m\u001b[43m=\u001b[49m\u001b[38;5;250;43m \u001b[39;49m\u001b[32;43m0.2\u001b[39;49m\u001b[43m)\u001b[49m\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m)\n",
-      "\u001b[31mTypeError\u001b[39m: rnorm() got an unexpected keyword argument 'loc'"
+      "Which value of a normal(10, 0.2) has a cumulative probability of 0.9? 10.25631031310892\n",
+      "Generate 2000 random values from a normal(10, 0.2) distribution: [10.09934283  9.97234714 10.12953771 ...  9.82362507  9.96738661\n",
+      "  9.85101947]\n"
      ]
     }
    ],
@@ -224,13 +215,13 @@
     "\n",
     "print(f\"Probability that a normal(10, 0.2) takes the value 2: {dnorm(2, mu = 10, s = 0.2)}\")\n",
     "print(f\"Probability that a normal(10, 0.2) will take a value less than 2: {pnorm(2, mu=10, s= 0.2)}\")\n",
-    "print(f\"Which value of a normal(10, 0.2) has a cumulative probability of 0.9? {qnorm(0.9, mu=10,  = 0.2)}\")\n",
-    "print(f\"Generate 2000 random values from a normal(10, 0.2) distribution: {rnorm(2000, size = 10, prob = 0.2)}\")"
+    "print(f\"Which value of a normal(10, 0.2) has a cumulative probability of 0.9? {qnorm(0.9, mu=10,  s= 0.2)}\")\n",
+    "print(f\"Generate 2000 random values from a normal(10, 0.2) distribution: {rnorm(n=2000, mu = 10, s = 0.2)}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "428c13d9",
    "metadata": {},
    "outputs": [
@@ -273,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "id": "6a7d736a",
    "metadata": {},
    "outputs": [],
@@ -281,42 +272,42 @@
     "# Distribución uniforme\n",
     "from scipy.stats import uniform\n",
     "\n",
-    "def duniform(n, mu= 0, s = 1):\n",
+    "def duniform(n, a = 0, b = 1):\n",
     "    \"\"\"\n",
     "    Calcula la estimación puntual de la distribución uniforme.\n",
     "    \"\"\"\n",
-    "    result = uniform.pdf(x = n, loc = mu, scale = s)\n",
+    "    result = uniform.pdf(x = n, loc = a, scale = b-a)\n",
     "\n",
     "    return result\n",
     "\n",
-    "def puniform(n, mu = 0, s = 1):\n",
+    "def puniform(n, a = 0, b = 1):\n",
     "    \"\"\"\n",
     "    Calcula el acumulado de la distribución uniforme.\n",
     "    \"\"\"\n",
-    "    result = uniform.cdf(x = n, loc = mu, scale = s)\n",
+    "    result = uniform.cdf(x = n, loc = a, scale = b - a)\n",
     "\n",
     "    return result\n",
     "\n",
-    "def quniform(n, mu = 0, s = 1):\n",
+    "def quniform(n, a = 0, b = 1):\n",
     "    \"\"\"\n",
     "    Calcula la función cuantil a partir de la distribución uniforme.\n",
     "    \"\"\"\n",
-    "    result = uniform.ppf(q = n, loc = mu, scale = s)\n",
+    "    result = uniform.ppf(q = n, loc = a, scale = b - a)\n",
     "\n",
     "    return result\n",
     "\n",
-    "def runiform(mu = 0, s = 1, n = 1):\n",
+    "def runiform(n, a = 0, b = 1):\n",
     "    \"\"\"\n",
     "    Calcula el acumulado de la distribución uniforme.\n",
     "    \"\"\"\n",
-    "    result = uniform.rvs(loc = mu, scale = s, size = n)\n",
+    "    result = uniform.rvs(size = n, loc = a, scale = b - a)\n",
     "\n",
     "    return result"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 19,
    "id": "7e813a98",
    "metadata": {},
    "outputs": [
@@ -324,28 +315,31 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Probability that a uniform(10, 0.2) takes the value 2: 0.30198988800000004\n",
-      "Probability that a uniform(10, 0.2) will take a value less than 2: 0.6777995263999999\n",
-      "Which value of a normal(10, 0.2) has a cumulative probability of 0.9? 4.0\n",
-      "Generate 2000 random values from a uniform(10, 0.2) distribution: [1 4 3 ... 0 0 1]\n"
+      "Probability that a uniform(10, 0.2) takes the value 2: 0.0\n",
+      "Probability that a uniform(10, 0.2) will take a value less than 2: 0.0\n",
+      "Which value of a uniform(10, 0.2) has a cumulative probability of 0.9? 10.18\n",
+      "Generate 2000 random values from a uniform(10, 0.2) distribution: [10.07490802 10.19014286 10.14639879 ... 10.0137916  10.01141094\n",
+      " 10.05643741]\n"
      ]
     }
    ],
    "source": [
     "# Distribución uniforme(10, 0.2), dónde n = 10 es el número de ensayos y p = 0.2 es la probabilidad de éxito en un solo ensayo\n",
+    "# Como la distribución uniforme utiliza limites inferior y superior, no puedo poner explicitamente que el valor de b sea 0.2, porque daría número negativo, lo cual la distribución\n",
+    "# no puede interpretar como válido, por eso se pone 10.2 y así scale que es b - a daría el rango que queremos que es 0.2\n",
     "import numpy as np\n",
     "\n",
     "np.random.seed(42)\n",
     "\n",
-    "print(f\"Probability that a uniform(10, 0.2) takes the value 2: {dbinom(2, size = 10, prob = 0.2)}\")\n",
-    "print(f\"Probability that a uniform(10, 0.2) will take a value less than 2: {pbinom(2, size = 10, prob = 0.2)}\")\n",
-    "print(f\"Which value of a normal(10, 0.2) has a cumulative probability of 0.9? {qbinom(0.9, size = 10, prob = 0.2)}\")\n",
-    "print(f\"Generate 2000 random values from a uniform(10, 0.2) distribution: {rbinom(2000, size = 10, prob = 0.2)}\")"
+    "print(f\"Probability that a uniform(10, 0.2) takes the value 2: {duniform(2, a = 10, b = 10.2)}\")\n",
+    "print(f\"Probability that a uniform(10, 0.2) will take a value less than 2: {puniform(2, a =10, b = 10.2)}\")\n",
+    "print(f\"Which value of a uniform(10, 0.2) has a cumulative probability of 0.9? {quniform(0.9, a =10,  b = 10.2)}\")\n",
+    "print(f\"Generate 2000 random values from a uniform(10, 0.2) distribution: {runiform(n=2000, a = 10, b = 10.2)}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 21,
    "id": "b9feb100",
    "metadata": {},
    "outputs": [
@@ -365,13 +359,13 @@
     "\n",
     "np.random.seed(42)\n",
     "\n",
-    "mu = 0\n",
-    "s = 1\n",
+    "a = 0\n",
+    "b = 1\n",
     "data = np.linspace(-5, 5, 1000)\n",
     "\n",
-    "pmf = duniform(data, mu = mu, s = s)\n",
-    "cdf = puniform(data, mu = mu, s = s)\n",
-    "ppf = quniform(data, mu = mu, s = s)\n",
+    "pmf = duniform(data, a = a, b = b)\n",
+    "cdf = puniform(data, a = a, b = b)\n",
+    "ppf = quniform(data, a = a, b = b)\n",
     "\n",
     "fig, axis = plt.subplots(3, 1, figsize = (5, 7))\n",
     "\n",
